tests/fixtures/invalid/unknown_enum_variant.ny
// Error: enum has no variant 'Yellow'
enum Color { Red, Green, Blue }

fn main() -> i32 {
    c : Color = Color::Yellow;
    return 0;
}
